Enhance GeneticTimetableScheduler with new features and optimizations. Updated GA parameters, added smart mutation and conflict-aware crossover, and introduced room load balancing. Improved ClassSectionController with support request handling and refined ClassSection entity for better clarity. Updated SemesterService and CourseOfferingService for improved cohort handling. Enhanced frontend components for better user experience with new filters and status indicators.